# automation_demos

./: README.md  create_parent_prefix.yml  get_and_set_next_available.yml  graphql_inventory.yml  nornir_example.py  pyproject.toml  rest_inventory.yml
